<resources>
    <string name="app_name">Tricky Alarm</string>
    <string name="action_add_alarm">Add alarm</string>
    <string name="p1">"@drawable/p3"</string>

    <!-- Weekday's letters -->
    <string name="monday_letter">Mon</string>
    <string name="tuesday_letter">Tue</string>
    <string name="wednesday_letter">Wed</string>
    <string name="thursday_letter">Thu</string>
    <string name="friday_letter">Fri</string>
    <string name="saturday_letter">Sat</string>
    <string name="sunday_letter">Sun</string>

    <!-- Alarm's fields -->
    <string name="new_alarm">New alarm</string>
    <string name="time">Time</string>
    <string name="repeat_on">Repeat on:</string>
    <string name="bias">Bias</string>
    <string name="repeat">Repeat:</string>
    <string name="interval">Interval</string>
    <string name="volume">Volume</string>
    <string name="vibrated">Vibration</string>
    <string name="sound">Sound</string>
    <string name="reminder">Notification</string>
    <string name="reminder_explain">In how many hours you want to be notified to go to bed</string>

    <string name="hint_add_alarm">Tap here to add new alarm</string>
    <string name="successful_deletion">Alarm was deleted</string>
    <string name="unsuccessful_deletion">Alarm was not deleted</string>
    <string name="alarm_on">Alarm is switched on</string>
    <string name="alarm_off">Alarm is switched off</string>
    <string name="alarms_much">Alarms too much. Please, remove a few alarms</string>
    <string name="go_bed">It is time for bed! You have to wake up in</string>
    <string name="hours">hours</string>
    <string name="cannot_repeat">Repeat interval is equal 0. Alarm will be turn off.</string>
    <string name="wake_up">Time to wake up!</string>
    <string name="minutes">min</string>

    <string name="title_activity_signal">SignalActivity</string>
    <string name="title_sound_selector">Sound</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
