<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_height"
    android:layout_marginTop="0dp"
    card_view:cardCornerRadius="0dp"
    android:layout_marginBottom="0.5dp"
    card_view:cardBackgroundColor="@color/card_background">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fadingEdgeLength="0dp">

        <TextView
            android:id="@+id/alarm_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="7:30"
            android:paddingLeft="15dp"
            android:textSize="40sp"
            android:textColor="@color/white_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:weightSum="7">

            <Button
                android:id="@+id/monday_letter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white_color"
                android:text="@string/monday_letter"
                android:textSize="@dimen/weekday_letter"/>

            <Button
                android:id="@+id/tuesday_letter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white_color"
                android:text="@string/tuesday_letter"
                android:textSize="@dimen/weekday_letter"/>

            <Button
                android:id="@+id/wednesday_letter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white_color"
                android:text="@string/wednesday_letter"
                android:textSize="@dimen/weekday_letter"/>

            <Button
                android:id="@+id/thursday_letter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white_color"
                android:text="@string/thursday_letter"
                android:textAllCaps="false"
                android:textSize="@dimen/weekday_letter"/>

            <Button
                android:id="@+id/friday_letter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white_color"
                android:text="@string/friday_letter"
                android:textSize="@dimen/weekday_letter"/>

            <Button
                android:id="@+id/saturday_letter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white_color"
                android:text="@string/saturday_letter"
                android:textSize="@dimen/weekday_letter"/>

            <Button
                android:id="@+id/sunday_letter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white_color"
                android:text="@string/sunday_letter"
                android:textAllCaps="false"
                android:textSize="@dimen/weekday_letter"/>

        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>

